Change image paths to relative in index.html
Updated image paths to use relative paths instead of absolute paths.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <base href="/ettZ-app">
   <meta name="robots" content="index,follow">
-  <link rel="shortcut icon" type="image/x-icon" href="ettZ-app/img/logo-crea.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="img/logo-crea.png" />
   <title>Jardinier & Paysagiste   et alentours | ETT.ZConstruct</title>
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://www.ETT.ZConstruct.be">
@@ -17,15 +17,15 @@
   <meta property="og:description" content="Jardinier & Paysagiste   et alentours. Experts paysagistes et jardiniers dédiés pour créer et entretenir vos espaces extérieurs.">
   <meta property="twitter:description" content="Jardinier & Paysagiste   et alentours. Experts paysagistes et jardiniers dédiés pour créer et entretenir vos espaces extérieurs.">
 
-  <meta property="og:image" content="ettZ-app/img/img_2423-min.png"/>
+  <meta property="og:image" content="img/img_2423-min.png"/>
   <meta property="og:image:type" content="image/png"/>
   <meta property="og:image:width" content="2078">
   <meta property="og:image:height" content="971">
-  <meta property="twitter:image" content="/ettZ-app/img/">
+  <meta property="twitter:image" content="/img/">
   <meta property="twitter:image:alt" content="">
 
-  <link  href="ettZ-app/img/img_2423-min.png" as="image" media="(max-width: 992px)"><link  href="ettZ-app/img/img_2423-min.png" as="image" media="(max-width: 1199px)"><link  href="ettZ-app/img/img_2423-min.png" as="image" media="(min-width: 1200px)">
-  <link  href="ettZ-app/img/img_2423-min.png" as="image" media="(max-width: 992px)"><link  href="ettZ-app/img/img_2423-min.png" as="image" media="(max-width: 1199px)"><link  href="ettZ-app/img/img_2423-min.png" as="image" media="(min-width: 1200px)">
+  <link  href="img/img_2423-min.png" as="image" media="(max-width: 992px)"><link  href="img/img_2423-min.png" as="image" media="(max-width: 1199px)"><link  href="img/img_2423-min.png" as="image" media="(min-width: 1200px)">
+  <link  href="img/img_2423-min.png" as="image" media="(max-width: 992px)"><link  href="img/img_2423-min.png" as="image" media="(max-width: 1199px)"><link  href="img/img_2423-min.png" as="image" media="(min-width: 1200px)">
 
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/application-fd2bb3d4.css" media="all" />
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/app_visitor-e7e100e6.css" media="all" />
@@ -62,7 +62,7 @@
     {"@context":"https://schema.org","@type":"WebSite","name":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be"}
   </script>
   <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","legalName":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be","sameAs":["https://www.instagram.com/ETT.ZConstruction_/?hl=fr","https://maps.app.goo.gl/LP7yxanyhAoJ2vMAA"],"address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":" ","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"ettZ-app/img/logo-ettzconstruction.png","logo":{"@type":"ImageObject","url":"ettZ-app/img/logo-ettzconstruction.png","inLanguage":"fr-FR","datePublished":"2024-10-17","contentSize":40384,"width":"600","height":"137"}}
+    {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","legalName":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be","sameAs":["https://www.instagram.com/ETT.ZConstruction_/?hl=fr","https://maps.app.goo.gl/LP7yxanyhAoJ2vMAA"],"address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":" ","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"img/logo-ettzconstruction.png","logo":{"@type":"ImageObject","url":"img/logo-ettzconstruction.png","inLanguage":"fr-FR","datePublished":"2024-10-17","contentSize":40384,"width":"600","height":"137"}}
   </script>
 </head>
 <body class="view-visitor theme_wide menu_fixed has_header1 has_header2 has_header2_simple has_no_aside has_footer default_page adapt_header2_height_to_window_on_desktop lazyload ">
@@ -176,7 +176,7 @@
       <div class="header-mobile-logo">
         <a><div class="element element-business-logo">
         <img title="Logo ETT.ZConstruct" alt="Logo ETT.ZConstruct" style="max-width: 100%;" height="137" width="600"
-             src="ettZ-app/img/logo-ettzconstruction.png" /></div></a>
+             src="img/logo-ettzconstruction.png" /></div></a>
       </div>
     </header>
 
@@ -294,7 +294,7 @@
     </div></div></div></div>
     </div></div></div><div class="container-light" id="header1"><div id="header1-static" class="">
       <div class="header1-static-logo">
-        <div id="container_55625383" class=" sb-bloc sb-bloc-level-3 header1-logo bloc-element-business-logo  " style="padding: 10px 0px 10px 0px;"><div id="container_55625383_inner" style="" class="sb-bloc-inner container_55625383_inner"><div class="element element-business-logo"><a href="/"><img style="max-width: 100%;" height="137" width="600" src="ettZ-app/img/logo-ettzconstruction.png" /></a></div></div></div>
+        <div id="container_55625383" class=" sb-bloc sb-bloc-level-3 header1-logo bloc-element-business-logo  " style="padding: 10px 0px 10px 0px;"><div id="container_55625383_inner" style="" class="sb-bloc-inner container_55625383_inner"><div class="element element-business-logo"><a href="/"><img style="max-width: 100%;" height="137" width="600" src="img/logo-ettzconstruction.png" /></a></div></div></div>
       </div>
     </div></div></div></div><div class="container-light" id="header2"><div id="container_55625404" class=" sb-bloc sb-bloc-level-3 bloc-element-absolute-container mobile-adapt-height-to-content  " style="height: 450px;"><div id="container_55625404_inner" style="" class="sb-bloc-inner container_55625404_inner  container-dark bg-imaged"><div class="element element-absolute-container"><div class="tree-container"><div id="container_57836697" class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-static-container  " style="width: 25.0%;top: 3.63696%;left: 35.2323%;"><div id="container_57836697_inner" style="margin: 10px 10px 10px 10px;padding: 20px 20px 20px 20px;" class="sb-bloc-inner container_57836697_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57888205" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  " style="height: 90px;"><div id="container_57888205_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57888205_inner"><div class="element element-spacer"></div></div></div></div></div></div></div><div id="container_57542239" class="sb-bloc-alignment-wrapper  sb-bloc-alignment-h-v sb-bloc-alignment-h-center sb-bloc-alignment-v-middle  "><div class="sb-bloc-alignment-sibling"></div><div class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-title" style="top: 30.9467%;left: 31.5117%;"><div id="container_57542239_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542239_inner"><div class="element element-title sb-vi-text-center theme-skin"><h1 class=" forced-size size-44 forced-mobile-size mobile-size-36"><span class="element-title-inner"><span style="font-family:Helvetica;">
     Bienvenue chez ETT.ZConstruct<br />Votre paysagiste et partenaire idéal pour la construction, l'entretien ou la rénovation de votre piscine</span></span></h1></div></div></div></div><div id="container_57888212" class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-static-container  " style="width: 25.0%;top: 62.3344%;left: 44.0323%;"><div id="container_57888212_inner" style="margin: 10px 10px 10px 10px;padding: 20px 20px 20px 20px;" class="sb-bloc-inner container_57888212_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57888213" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  " style="height: 90px;"><div id="container_57888213_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57888213_inner"><div class="element element-spacer"></div></div></div></div></div></div></div></div></div></div></div>
@@ -313,7 +313,7 @@
       <div class="sb-bloc-inner container_57542799_inner" id="container_57542799_inner" style=""><div class="subcontainers"><div id="container_57542803" class=" sb-bloc sb-bloc-level-3 bloc-element-columns-container  " style=""><div class="element element-columns-container align-top tree-container"><div class=" sb-bloc sb-bloc-level-1"><div class="sb-row sb-row-custom subcontainers media-query columns-gutter-size-20"><div class=" sb-bloc sb-bloc-level-2 sb-col sb-col-sm" style="width: 50.0%;"><div class="subcontainers"><div id="container_57542818" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container bloc-eligible-for-height-equalization  " style="">
         <div id="container_57542818_inner" style="padding: 30px 30px 30px 30px;" >
           <img title="Logo ETT.ZConstruct" alt="Piscine" style="max-width: 100%;"
-               src="ettZ-app/img/piscine.jpg" />
+               src="img/piscine.jpg" />
       </div>
 
         <div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542817" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  " style="height: 200px;"><div id="container_57542817_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542817_inner"><div class="element element-spacer"></div></div></div></div></div></div></div></div></div><div class=" sb-bloc sb-bloc-level-2 sb-col sb-col-sm" style="width: 50.0%;"><div class="subcontainers"><div id="container_57542830" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container bloc-eligible-for-height-equalization  " style=""><div id="container_57542830_inner" style="padding: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542830_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542823" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  hide-on-mobile " style="height: 60px;"><div id="container_57542823_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542823_inner"><div class="element element-spacer"></div></div></div><div id="container_57542826" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container  " style="margin: -0px -0px -0px -140px; z-index: 1;padding: 10px 10px 10px 10px;"><div id="container_57542826_inner" style="padding: 30px 30px 30px 30px;border-top-right-radius: 10px;border-top-left-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;box-shadow: 5px 15px 40px rgba(47,47,47,0.2);" class="sb-bloc-inner container_57542826_inner background-color-before-c-3 sb-display-animated border-radius container-light" data-animation-options="{"type":"slideInRight","duration":1000,"delay":0}"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542775" class=" sb-bloc sb-bloc-level-3 bloc-element-title  " style="padding: 10px 10px 10px 10px;"><div class="element element-title sb-vi-text-left theme-skin"><h2><span class="element-title-inner">Une approche personnalisée pour chaque projet</span></h2></div></div><div id="container_57542781" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text sb-vi-mobile-text-center displayed_in_1_column" spellcheck="true"><p><strong>Chaque jardin est unique,</strong> et nous croyons qu'il doit refléter la personnalité et les envies de ceux qui en profitent. C'est pourquoi, chez  ETT.ZConstruct, nous accordons une grande importance à  l'écoute  de nos clients. Que vous ayez une idée précise ou que vous ayez besoin de conseils, nous prenons le temps de comprendre vos attentes, vos goà»ts, et les spécificités de votre terrain pour vous proposer des solutions adaptées et  sur mesure.</p>
@@ -369,7 +369,7 @@
           <script type="application/ld+json">{"@context":"https://schema.org","@type":"ImageObject","url":"https://files.sbcdnsb.com/images/Q4xOA1XxrQz5eq9QZuOFuA/content/1730295955/4253601/service-piscines-geneve.jpeg","name":"service-piscines-geneve.jpeg","datePublished":"2024-10-29","width":"4032","height":"2268","caption":"service piscines ","inLanguage":"fr-FR"}</script>
 
           <img width="4032" height="160" title="service piscines" alt="Piscine" style="max-width: 100%;"
-               src="ettZ-app/img/piscine.jpg" />
+               src="img/piscine.jpg" />
 
 
         </div>
@@ -593,7 +593,7 @@
     </div>
 
     <script type="application/ld+json">
-      {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":" ","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"ettZ-app/img/logo-ettzconstruction.png"}
+      {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":" ","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"img/logo-ettzconstruction.png"}
     </script></div></div></div><div id="container_55625486" class=" sb-bloc sb-bloc-level-3 bloc-element-menu  " style="padding: 10px 10px 0px 10px;"><div class="element element-menu sb-vi-text-center sb-vi-mobile-text-center"><div class=" menu-horizontal menu-tabs-links"><div class="menu-level-container menu-level-0">
     <ul class="menu-tabs sb-row media-query">
       <li class="menu-tab-container sb-col   ">
