--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/tool/visitor/elements/manifests/content_box-5f80c809.css" media="all" />
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/themes/desktop/8/css/visitor-8affef90.css" media="all" />
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/themes/mobile/6/css/visitor-c251b678.css" media="only screen and (max-width: 992px)" />
-  <link rel="stylesheet" media="all" href="ettZ-app/site/Q4xOA1XxrQz5eq9QZuOFuA/styles/1743014306/dynamic-styles.css">
-  <link rel="stylesheet" media="all" href="ettZ-app/styles/pages/1553979/1744898768/containers-specific-styles.css">
+  <link rel="stylesheet" media="all" href="site/Q4xOA1XxrQz5eq9QZuOFuA/styles/1743014306/dynamic-styles.css">
+  <link rel="stylesheet" media="all" href="styles/pages/1553979/1744898768/containers-specific-styles.css">
   <meta name="csrf-param" content="authenticity_token" />
   <meta name="csrf-token" content="ElJBEhzsMcldVos_RErHxM9ud6sEfFO_voJ0Ft65F7PKd0IX3I9WB3YD-oHBF8Pz1uLsqVOg0YEJAYEYOW9Rkw" />
   <script>
@@ -131,7 +131,7 @@
             <span class="link-label ">Avis clients</span>
           </a>  </li>
         <li class="menu-mobile-element  ">
-          <a class="menu-tab-element   content-link" href="/ettZ-app/contact.html">
+          <a class="menu-tab-element   content-link" href="/contact.html">
             <span class="link-label ">Contact</span>
           </a>  </li>
       </ul>
@@ -283,7 +283,7 @@
         <li class="menu-tab-container sb-col   ">
           <div class="menu-tab">
 
-            <a class="menu-tab-element link-text link-text-dark  content-link" href="/ettZ-app/contact.html">
+            <a class="menu-tab-element link-text link-text-dark  content-link" href="/contact.html">
             <span class='link-label inline-flex items-center  main-menu icon-position-left' style=''>
 
               <span class="">Contact</span>
@@ -300,7 +300,7 @@
     Bienvenue chez ETT.ZConstruct<br />Votre paysagiste et partenaire idéal pour la construction, l'entretien ou la rénovation de votre piscine</span></span></h1></div></div></div></div><div id="container_57888212" class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-static-container  " style="width: 25.0%;top: 62.3344%;left: 44.0323%;"><div id="container_57888212_inner" style="margin: 10px 10px 10px 10px;padding: 20px 20px 20px 20px;" class="sb-bloc-inner container_57888212_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57888213" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  " style="height: 90px;"><div id="container_57888213_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57888213_inner"><div class="element element-spacer"></div></div></div></div></div></div></div></div></div></div></div>
   </div><div class="container-light sb-row media-query sb-row-table" id="center"><div class="sb-col sb-col-sm" id="center_inner_wrapper"><div class="" id="center_inner"><div class="sections-container"><section class=" section tree-container" id="section-n-7_2678726" >
     <div class="sb-bloc-inner container_57542736_inner" id="container_57542736_inner" style="padding: 60px 10px 60px 10px;"><div class="subcontainers"><div id="container_57542740" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container  " style="padding: 10px 10px 10px 10px;"><div id="container_57542740_inner" style="padding: 40px 40px 40px 40px;border-top-right-radius: 10px;border-top-left-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;border-width: 1px;border-style: solid;box-shadow: 5px 15px 40px rgba(47,47,47,0.2);" class="sb-bloc-inner container_57542740_inner background-color-before-c-1 border-color-c-1 border-radius"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542757" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text sb-vi-mobile-text-center displayed_in_1_column forced-mobile-size mobile-size-26" spellcheck="true"><p style="text-align: center;"><span style="font-size:28px;"><span style="font-family:Helvetica;"><span class="color-c-2">Chez ETT.ZConstruct, nous sommes spécialisés
-      dans la création des piscines et l'entretien d'espaces verts.</span></span></span></p></div></div><div id="container_57541900" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text displayed_in_1_column" spellcheck="true"><p style="text-align: center;">En tant que petite entreprise locale, nous avons à coeur d'offrir un service personnalisé et de haute qualité pour transformer vos jardins et espaces extérieurs en véritables havres de paix, tout en respectant la nature et la biodiversité.</p></div></div><div id="container_57542760" class=" sb-bloc sb-bloc-level-3 bloc-element-link  " style="padding: 10px 10px 10px 10px;"><div class="element element-link link-lg sb-vi-text-center">  <a title="" class=" sb-vi-btn forced-color skin_2 content-link" href="/ettZ-app/contact.html">
+      dans la création des piscines et l'entretien d'espaces verts.</span></span></span></p></div></div><div id="container_57541900" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text displayed_in_1_column" spellcheck="true"><p style="text-align: center;">En tant que petite entreprise locale, nous avons à coeur d'offrir un service personnalisé et de haute qualité pour transformer vos jardins et espaces extérieurs en véritables havres de paix, tout en respectant la nature et la biodiversité.</p></div></div><div id="container_57542760" class=" sb-bloc sb-bloc-level-3 bloc-element-link  " style="padding: 10px 10px 10px 10px;"><div class="element element-link link-lg sb-vi-text-center">  <a title="" class=" sb-vi-btn forced-color skin_2 content-link" href="/contact.html">
       <div class="content-container flex items-center">
 
         <span class="inner-text">Nous contacter</span>
@@ -318,7 +318,7 @@
 
         <div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542817" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  " style="height: 200px;"><div id="container_57542817_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542817_inner"><div class="element element-spacer"></div></div></div></div></div></div></div></div></div><div class=" sb-bloc sb-bloc-level-2 sb-col sb-col-sm" style="width: 50.0%;"><div class="subcontainers"><div id="container_57542830" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container bloc-eligible-for-height-equalization  " style=""><div id="container_57542830_inner" style="padding: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542830_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542823" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-spacer  hide-on-mobile " style="height: 60px;"><div id="container_57542823_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_57542823_inner"><div class="element element-spacer"></div></div></div><div id="container_57542826" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container  " style="margin: -0px -0px -0px -140px; z-index: 1;padding: 10px 10px 10px 10px;"><div id="container_57542826_inner" style="padding: 30px 30px 30px 30px;border-top-right-radius: 10px;border-top-left-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;box-shadow: 5px 15px 40px rgba(47,47,47,0.2);" class="sb-bloc-inner container_57542826_inner background-color-before-c-3 sb-display-animated border-radius container-light" data-animation-options="{"type":"slideInRight","duration":1000,"delay":0}"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_57542775" class=" sb-bloc sb-bloc-level-3 bloc-element-title  " style="padding: 10px 10px 10px 10px;"><div class="element element-title sb-vi-text-left theme-skin"><h2><span class="element-title-inner">Une approche personnalisée pour chaque projet</span></h2></div></div><div id="container_57542781" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text sb-vi-mobile-text-center displayed_in_1_column" spellcheck="true"><p><strong>Chaque jardin est unique,</strong> et nous croyons qu'il doit refléter la personnalité et les envies de ceux qui en profitent. C'est pourquoi, chez  ETT.ZConstruct, nous accordons une grande importance à  l'écoute  de nos clients. Que vous ayez une idée précise ou que vous ayez besoin de conseils, nous prenons le temps de comprendre vos attentes, vos goà»ts, et les spécificités de votre terrain pour vous proposer des solutions adaptées et  sur mesure.</p>
 
-          <p>Nous intervenons aussi bien pour la <strong>création de nouveaux jardins</strong> que pour la  rénovation  et l'entretien  d'espaces existants. Que vous souhaitiez une terrasse verdoyante, un coin potager, ou un <strong>aménagement plus paysager</strong> avec des arbres et des arbustes soigneusement sélectionnés, nous mettons notre expertise à  votre service pour concevoir un espace extérieur qui vous ressemble.</p></div></div><div id="container_57542813" class=" sb-bloc sb-bloc-level-3 bloc-element-link  " style="padding: 10px 10px 10px 10px;"><div class="element element-link link-lg sb-vi-text-left">  <a title="" class=" sb-vi-btn forced-color skin_1 content-link" href="/ettZ-app/contact.html">
+          <p>Nous intervenons aussi bien pour la <strong>création de nouveaux jardins</strong> que pour la  rénovation  et l'entretien  d'espaces existants. Que vous souhaitiez une terrasse verdoyante, un coin potager, ou un <strong>aménagement plus paysager</strong> avec des arbres et des arbustes soigneusement sélectionnés, nous mettons notre expertise à  votre service pour concevoir un espace extérieur qui vous ressemble.</p></div></div><div id="container_57542813" class=" sb-bloc sb-bloc-level-3 bloc-element-link  " style="padding: 10px 10px 10px 10px;"><div class="element element-link link-lg sb-vi-text-left">  <a title="" class=" sb-vi-btn forced-color skin_1 content-link" href="/contact.html">
         <div class="content-container flex items-center">
 
           <span class="inner-text">Contacter ETT.ZConstruct</span>
@@ -421,7 +421,7 @@
 
         <p style="text-align: center;">Nous serons ravis de vous accompagner à  chaque étape, <strong>de la conception à  l'entretien</strong>, pour que votre espace extérieur reflète pleinement vos aspirations.</p>
       </section></div></div><div id="container_57543439" class=" sb-bloc sb-bloc-level-3 bloc-element-link  " style="padding: 10px 10px 10px 10px;"><div class="element element-link link-lg sb-vi-text-center">
-          <a title="" class=" sb-vi-btn forced-color skin_1 content-link" href="/ettZ-app/contact.html">
+          <a title="" class=" sb-vi-btn forced-color skin_1 content-link" href="/contact.html">
         <div class="content-container flex items-center">
 
           <span class="inner-text">Contacter ETT.ZConstruct</span>
@@ -491,7 +491,7 @@
       <li class="menu-tab-container sb-col   ">
         <div class="menu-tab">
 
-          <a class="menu-tab-element link-text link-text-dark  content-link" href="/ettZ-app/contact.html">
+          <a class="menu-tab-element link-text link-text-dark  content-link" href="/contact.html">
             <span class='link-label inline-flex items-center  secondary-menu icon-position-left' style=''>
 
               <span class="">Contact</span>
